[gd_scene load_steps=6 format=3 uid="uid://c6yd50smba556"]

[ext_resource type="Texture2D" uid="uid://db33gxgpenegt" path="res://assets/sprites/environment/Basket.png" id="1_dov6q"]
[ext_resource type="Script" path="res://scripts/picnic_basket.gd" id="1_kkvjl"]
[ext_resource type="PackedScene" uid="uid://c1nbfn0430jp5" path="res://assets/components/health_bar/health_bar.tscn" id="2_ajklo"]
[ext_resource type="Texture2D" uid="uid://8j387ejaerhj" path="res://assets/sprites/environment/Blanket.png" id="2_dgp6t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7lax"]
size = Vector2(112, 112)

[node name="PicnicBasket" type="Node2D"]
texture_filter = 1
script = ExtResource("1_kkvjl")

[node name="Blanket" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(3, 3)
texture = ExtResource("2_dgp6t")
region_enabled = true
region_rect = Rect2(0, 0, 59.1171, 81.0181)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_dov6q")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_j7lax")

[node name="HealthBar" parent="." instance=ExtResource("2_ajklo")]
offset_left = -64.0
offset_top = 60.0
offset_right = 448.0
offset_bottom = 108.0
max_value = 500.0
value = 500.0

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="empty" from="HealthBar" to="." method="_on_health_bar_empty"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
